Update kitten pictures

--- a/3-html-kittens/index.html
+++ b/3-html-kittens/index.html
@@ -14,7 +14,7 @@
         }
 
         .kitten img {
-            width: 300px;
+            height: 300px;
             display: block;
         }
     </style>
@@ -24,11 +24,6 @@
     <h1>🐱 Kittens 🐱</h1>
 
     <section class="kittens">
-        <div class="kitten">
-            <img src="./images/kitten-4.jpeg"/>
-            Meow kitten
-        </div>
-
     </section>    
 </body>
 
